--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <!-- 사용자 css -->
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/style.2.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- jQuery -->
     <script src="./js/jquery-3.5.1.min.js"></script>
     <!-- view animation -->
     <script src="https://unpkg.com/enter-view"></script>
-    <!-- main.js -->
-    <script src="./js/main.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 
 <body>
@@ -39,9 +38,9 @@
                 <!-- header - 메인 메뉴 -->
                 <nav class="menu">
                     <ul class="depth1">
-                        <li><a href="#">about me</a></li>
-                        <li><a href="#">works</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a onclick="fnMove('#about_me')">about me</a></li>
+                        <li><a onclick="fnMove('#works')">works</a></li>
+                        <li><a onclick="fnMove('#contact')">contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -69,25 +68,25 @@
             <h1>ability</h1>
             <div class="gauge">
                 <div class="photoshop">
-                    <p>photo shop <span>75%</span></p>
+                    <p>photo shop</p>
                     <div class="gauge_1">
                         <div class="ani_1"></div>
                     </div>
                 </div>
                 <div class="html_css">
-                    <p>html5,css <span>60%</span></p>
+                    <p>html5,css</p>
                     <div class="gauge_2">
                         <div class="ani_2"></div>
                     </div>
                 </div>
                 <div class="illust">
-                    <p>illustrator <span>70%</span></p>
+                    <p>illustrator</p>
                     <div class="gauge_3">
                         <div class="ani_3"></div>
                     </div>
                 </div>
                 <div class="java">
-                    <p>javascript,jQuery <span>40%</span></p>
+                    <p>javascript,jQuery</p>
                     <div class="gauge_4">
                         <div class="ani_4"></div>
                     </div>
@@ -139,6 +138,7 @@
             </div>
         </div>
     </section>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
