--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
 
 <body>
     <section id="main_visual">
-        <!-- main visual -->
-        <div class="bg0_title">
-            <h1>Stay hungry</h1>
-            <h1>Stay foolish</h1>
-        </div>
-
         <header id="main_header">
             <div class="header_ctn">
                 <!-- logo -->
@@ -45,6 +39,11 @@
                 </nav>
             </div>
         </header>
+        <!-- main visual -->
+        <div class="bg0_title">
+            <h1>Stay hungry</h1>
+            <h1>Stay foolish</h1>
+        </div>
     </section>
     <!-- about me -->
     <section id="about_me">
@@ -108,8 +107,7 @@
                     <li><a href="#">Graphic & poster</a> |</li>
                     <li><a href="#">Icon</a> |</li>
                     <li><a href="#">Main banner</a> |</li>
-                    <li><a href="#">Mobile</a> |</li>
-                    <li><a href="#">Project</a></li>
+                    <li><a href="#">Mobile</a></li>
                 </ul>
             </nav>
             <div class="works_cts">
