--- a/index.html
+++ b/index.html
@@ -101,25 +101,100 @@
                 <h1>works</h1>
                 <div class="r_line"></div>
             </div>
-            <nav class="works_menu">
-                <ul>
-                    <li><a href="#">Website</a> |</li>
-                    <li><a href="#">Graphic & poster</a> |</li>
-                    <li><a href="#">Icon</a> |</li>
-                    <li><a href="#">Main banner</a> |</li>
-                    <li><a href="#">Mobile</a></li>
-                </ul>
-            </nav>
-            <div class="works_cts">
-                <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                </ul>
+            <div class="works_menu1">
+                <nav>
+                    <ul>
+                        <li><a href="#">Website</a> |</li>
+                        <li><a href="javascript:show_layer('2')">Graphic & poster</a> |</li>
+                        <li><a href="javascript:show_layer('3')">Icon</a> |</li>
+                        <li><a href="javascript:show_layer('4')">Main banner</a> |</li>
+                        <li><a href="javascript:show_layer('5')">Mobile</a></li>
+                    </ul>
+                </nav>
+                <div class="works_cts">
+                    <ul class="website">
+                        <li>
+                            <a href="https://godls4222.github.io/coffe_brand_homepage_renewal/" target="blank">
+                                <img src="./img/works_1.jpg" alt="works_1">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/coffeemyungga/" target="blank">
+                                <img src="./img/works_2.jpg" alt="wokrs_2">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/weltree/" target="blank">
+                                <img src="./img/works_3.jpg" alt="wokrs_3">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+            <div class="works_menu2" style="display: none;">
+                <nav>
+                    <ul>
+                        <li><a href="javascript:show_layer('1')">Website</a> |</li>
+                        <li><a href="#">Graphic & poster</a> |</li>
+                        <li><a href="javascript:show_layer('3')">Icon</a> |</li>
+                        <li><a href="javascript:show_layer('4')">Main banner</a> |</li>
+                        <li><a href="javascript:show_layer('5')">Mobile</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="works_menu3" style="display: none;">
+                <nav>
+                    <ul>
+                        <li><a href="javascript:show_layer('1')">Website</a> |</li>
+                        <li><a href="javascript:show_layer('2')">Graphic & poster</a> |</li>
+                        <li><a href="#">Icon</a> |</li>
+                        <li><a href="javascript:show_layer('4')">Main banner</a> |</li>
+                        <li><a href="javascript:show_layer('5')">Mobile</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="works_menu4" style="display: none;">
+                <nav>
+                    <ul>
+                        <li><a href="javascript:show_layer('1')">Website</a> |</li>
+                        <li><a href="javascript:show_layer('2')">Graphic & poster</a> |</li>
+                        <li><a href="javascript:show_layer('3')">Icon</a> |</li>
+                        <li><a href="#">Main banner</a> |</li>
+                        <li><a href="javascript:show_layer('5')">Mobile</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="works_menu5" style="display: none;">
+                <nav>
+                    <ul>
+                        <li><a href="javascript:show_layer('1')">Website</a> |</li>
+                        <li><a href="javascript:show_layer('2')">Graphic & poster</a> |</li>
+                        <li><a href="javascript:show_layer('3')">Icon</a> |</li>
+                        <li><a href="javascript:show_layer('4')">Main banner</a> |</li>
+                        <li><a href="#">Mobile</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- <div class="works_cts">
+                <ul class="website">
+                    <li><a href="https://godls4222.github.io/coffe_brand_homepage_renewal/" target="blank">
+                            <img src="./img/works_1.jpg" alt="works_1">
+                            <p class="hover">Join us!</p>
+                        </a>
+                    </li>
+                    <li><a href="https://godls4222.github.io/coffeemyungga/" target="blank">
+                            <img src="./img/works_2.jpg" alt="wokrs_2">
+                            <p class="hover">Join us!</p>
+                        </a>
+                    </li>
+                    <li><a href="https://godls4222.github.io/weltree/" target="blank">
+                            <img src="./img/works_3.jpg" alt="wokrs_3">
+                            <p class="hover">Join us!</p>
+                        </a>
+                    </li>
+                </ul>
+            </div> -->
         </div>
     </section>
 
