--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 <h1>works</h1>
                 <div class="r_line"></div>
             </div>
+            <!-- works menu1 -->
             <div class="works_menu1">
                 <nav>
                     <ul>
@@ -132,6 +133,8 @@
                     </ul>
                 </div>
             </div>
+
+            <!-- works menu2 -->
             <div class="works_menu2" style="display: none;">
                 <nav>
                     <ul>
@@ -142,7 +145,28 @@
                         <li><a href="javascript:show_layer('5')">Mobile</a></li>
                     </ul>
                 </nav>
+                <div class="works_cts">
+                    <ul class="website">
+                        <li>
+                            <a href="#" target="blank">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/coffeemyungga/" target="blank">
+                                <img src="./img/works_2.jpg" alt="wokrs_2">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/weltree/" target="blank">
+                                <img src="./img/works_3.jpg" alt="wokrs_3">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+
+            <!-- works menu3 -->
             <div class="works_menu3" style="display: none;">
                 <nav>
                     <ul>
