--- a/index.html
+++ b/index.html
@@ -101,17 +101,19 @@
                 <h1>works</h1>
                 <div class="r_line"></div>
             </div>
+
             <!-- works menu1 -->
-            <div class="works_menu1">
+            <div class="container">
                 <nav>
-                    <ul>
-                        <li><a href="#">Website</a> |</li>
-                        <li><a href="javascript:show_layer('2')">Graphic & poster</a> |</li>
-                        <li><a href="javascript:show_layer('3')">Icon</a> |</li>
-                        <li><a href="javascript:show_layer('4')">Main banner</a> |</li>
-                        <li><a href="javascript:show_layer('5')">Mobile</a></li>
+                    <ul class="tabs">
+                        <li class="tab-link current" data-tab="tab-1"><a>Website</a> |</li>
+                        <li class="tab-link" data-tab="tab-2"><a>Graphic & poster</a> |</li>
+                        <li class="tab-link" data-tab="tab-3"><a>Icon</a> |</li>
+                        <li class="tab-link" data-tab="tab-4"><a>Main banner</a> |</li>
+                        <li class="tab-link" data-tab="tab-5"><a>Mobile</a></li>
                     </ul>
                 </nav>
+            <div id="tab-1" class="tab_content crrent">
                 <div class="works_cts">
                     <ul class="website">
                         <li>
@@ -133,22 +135,78 @@
                     </ul>
                 </div>
             </div>
-
-            <!-- works menu2 -->
-            <div class="works_menu2" style="display: none;">
-                <nav>
-                    <ul>
-                        <li><a href="javascript:show_layer('1')">Website</a> |</li>
-                        <li><a href="#">Graphic & poster</a> |</li>
-                        <li><a href="javascript:show_layer('3')">Icon</a> |</li>
-                        <li><a href="javascript:show_layer('4')">Main banner</a> |</li>
-                        <li><a href="javascript:show_layer('5')">Mobile</a></li>
-                    </ul>
-                </nav>
+            <div id="tab-2" class="tab_content">
                 <div class="works_cts">
                     <ul class="website">
                         <li>
-                            <a href="#" target="blank">
+                            <a href="https://godls4222.github.io/coffe_brand_homepage_renewal/" target="blank">
+                                <img src="./img/works_3.jpg" alt="works_1">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/coffeemyungga/" target="blank">
+                                <img src="./img/works_1.jpg" alt="wokrs_2">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/weltree/" target="blank">
+                                <img src="./img/works_2.jpg" alt="wokrs_3">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="tab-3" class="tab_content">
+                <div class="works_cts">
+                    <ul class="website">
+                        <li>
+                            <a href="https://godls4222.github.io/coffe_brand_homepage_renewal/" target="blank">
+                                <img src="./img/works_2.jpg" alt="works_1">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/coffeemyungga/" target="blank">
+                                <img src="./img/works_3.jpg" alt="wokrs_2">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/weltree/" target="blank">
+                                <img src="./img/works_1.jpg" alt="wokrs_3">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="tab-4" class="tab_content">
+                <div class="works_cts">
+                    <ul class="website">
+                        <li>
+                            <a href="https://godls4222.github.io/coffe_brand_homepage_renewal/" target="blank">
+                                <img src="./img/works_1.jpg" alt="works_1">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/coffeemyungga/" target="blank">
+                                <img src="./img/works_3.jpg" alt="wokrs_2">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                        <li><a href="https://godls4222.github.io/weltree/" target="blank">
+                                <img src="./img/works_2.jpg" alt="wokrs_3">
+                                <p class="hover">Join us!</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="tab-5" class="tab_content">
+                <div class="works_cts">
+                    <ul class="website">
+                        <li>
+                            <a href="https://godls4222.github.io/coffe_brand_homepage_renewal/" target="blank">
+                                <img src="./img/works_3.jpg" alt="works_1">
                                 <p class="hover">Join us!</p>
                             </a>
                         </li>
@@ -158,67 +216,16 @@
                             </a>
                         </li>
                         <li><a href="https://godls4222.github.io/weltree/" target="blank">
-                                <img src="./img/works_3.jpg" alt="wokrs_3">
+                                <img src="./img/works_1.jpg" alt="wokrs_3">
                                 <p class="hover">Join us!</p>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
+            <div class="works_cts">
 
-            <!-- works menu3 -->
-            <div class="works_menu3" style="display: none;">
-                <nav>
-                    <ul>
-                        <li><a href="javascript:show_layer('1')">Website</a> |</li>
-                        <li><a href="javascript:show_layer('2')">Graphic & poster</a> |</li>
-                        <li><a href="#">Icon</a> |</li>
-                        <li><a href="javascript:show_layer('4')">Main banner</a> |</li>
-                        <li><a href="javascript:show_layer('5')">Mobile</a></li>
-                    </ul>
-                </nav>
             </div>
-            <div class="works_menu4" style="display: none;">
-                <nav>
-                    <ul>
-                        <li><a href="javascript:show_layer('1')">Website</a> |</li>
-                        <li><a href="javascript:show_layer('2')">Graphic & poster</a> |</li>
-                        <li><a href="javascript:show_layer('3')">Icon</a> |</li>
-                        <li><a href="#">Main banner</a> |</li>
-                        <li><a href="javascript:show_layer('5')">Mobile</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="works_menu5" style="display: none;">
-                <nav>
-                    <ul>
-                        <li><a href="javascript:show_layer('1')">Website</a> |</li>
-                        <li><a href="javascript:show_layer('2')">Graphic & poster</a> |</li>
-                        <li><a href="javascript:show_layer('3')">Icon</a> |</li>
-                        <li><a href="javascript:show_layer('4')">Main banner</a> |</li>
-                        <li><a href="#">Mobile</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <!-- <div class="works_cts">
-                <ul class="website">
-                    <li><a href="https://godls4222.github.io/coffe_brand_homepage_renewal/" target="blank">
-                            <img src="./img/works_1.jpg" alt="works_1">
-                            <p class="hover">Join us!</p>
-                        </a>
-                    </li>
-                    <li><a href="https://godls4222.github.io/coffeemyungga/" target="blank">
-                            <img src="./img/works_2.jpg" alt="wokrs_2">
-                            <p class="hover">Join us!</p>
-                        </a>
-                    </li>
-                    <li><a href="https://godls4222.github.io/weltree/" target="blank">
-                            <img src="./img/works_3.jpg" alt="wokrs_3">
-                            <p class="hover">Join us!</p>
-                        </a>
-                    </li>
-                </ul>
-            </div> -->
         </div>
     </section>
 
